# mlcplusplus

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE.md  LICENSE.txt  README.md  build.bat  build.sh  clean.bat  clean.sh  docs.sh  eclipse-cdt-codetemplates.xml  gen-distros.sh  gen-eclipse.sh  gen-kdevelop.sh  gen-mac.sh  gen-unix.sh  gen-visualstudio.bat  gen-visualstudio.sh  install-dependencies.bat  install-dependencies.sh  install.bat  install.sh  perf.py  performance.csv  performance.xlsx  prep-cs-cxx.sh  run-python-getdoc.sh  settings.sh  todo.md  todo.txt  ~$performance.xlsx
release/: CMakeLists.txt  Doxyfile  cwrapper.dox  design.dox  devguide.dox  install.dox  overview.dox
release/cmake/: FindMono.cmake  UseCSharp.cmake
release/dependencies/: cpprest-cmake.txt  main.cpp
release/doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in  design.dox  devguide-cs.dox  devguide.dox  home-c.dox  home-cpp.dox  home-csharp.dox  home-python.dox  install.dox  mac-install-pkg.dox  mac-install-raw.dox  old-overview.dox  overview.dox  ubuntu-install-raw.dox  win-install-raw.dox
release/include/: AuthenticatingProxy.hpp  AuthorizationBuilder.hpp  Credentials.hpp  MLCrypto.hpp  ResponseCodes.hpp
release/include/mlclient/: CWrapper.hpp  Connection.hpp  ConnectionWrapper.h  Document.hpp  DocumentContent.hpp  DocumentSet.hpp  HttpHeaders.hpp  InvalidFormatException.hpp  MarkLogicTypes.hpp  NoCredentialsException.hpp  Permission.hpp  Response.hpp  ResponseWrapper.h  SearchDescription.hpp  SearchResult.hpp  SearchResultSet.hpp  ValuesResult.hpp  ValuesResultSet.hpp  logging.hpp  mlclient.h  mlclient.hpp
release/include/mlclient/ext/: easylogging++.h
release/include/mlclient/internals/: AuthenticatingProxy.hpp  AuthorizationBuilder.hpp  Conversions.hpp  Credentials.hpp  FakeConnection.hpp
release/include/mlclient/utilities/: CppRestJsonDocumentContent.hpp  CppRestJsonHelper.hpp  DocumentBatchHelper.hpp  DocumentBatchWriter.hpp  DocumentHelper.hpp  PathNavigator.hpp  PugiXmlDocumentContent.hpp  PugiXmlHelper.hpp  ResponseHelper.hpp  SearchBuilder.hpp  SearchOptionsBuilder.hpp
release/samples/: CMakeLists.txt  CStruct.h  CStructWrapper.cpp  CStructWrapper.h  ConnectionFactory.cpp  ConnectionFactory.hpp  ConnectionFactoryWrapper.cpp  ConnectionFactoryWrapper.h  cgetasstruct.c  cgetdoc.c  getdoc.cpp  getdoc.py
release/samples/ccommon/: ConnectionFactoryWrapper.cpp  ConnectionFactoryWrapper.h
release/samples/cgetasstruct/: CStruct.h  CStructWrapper.cpp  CStructWrapper.h  cgetasstruct.c
release/samples/cgetdoc/: cgetdoc.c
release/samples/cppbatchupload/: batchupload.cpp
release/samples/cppcommon/: ConnectionFactory.cpp  ConnectionFactory.hpp
release/samples/cppcustomudf/: Makefile  groupandaggregateudf.cpp  readme.md
release/samples/cppgetdoc/: getdoc.cpp
release/samples/cppproducer/: producermain.cpp
release/samples/cppsearch/: search.cpp
release/samples/csbatchupload/: csbatchupload.sln  csbatchupload.userprefs
release/samples/csbatchupload/csbatchupload/: Program.cs  csbatchupload.csproj
release/samples/csgetdoc/: csgetdoc.sln  csgetdoc.userprefs
release/samples/csgetdoc/csgetdoc/: Program.cs  csgetdoc.csproj
release/samples/cssearch/: cssearch.sln  cssearch.userprefs
release/samples/cssearch/cssearch/: Program.cs  cssearch.csproj
release/samples/pygetdoc/: getdoc.py
release/src/: AsyncWrapper.hpp  AuthenticatingProxy.cpp  AuthenticatingProxy.hpp  AuthorizationBuilder.cpp  AuthorizationBuilder.hpp  CMakeLists.txt  CWrapper.hpp  Connection.cpp  Connection.hpp  ConnectionWrapper.cpp  ConnectionWrapper.h  Credentials.cpp  Credentials.hpp  Document.cpp  DocumentContent.cpp  DocumentContent.hpp  HttpHeaders.cpp  HttpHeaders.hpp  InvalidFormatException.cpp  InvalidFormatException.hpp  License.txt  MLCPlusPlus.cpp  MLCPlusPlus.h  MLCPlusPlus.hpp  MLCPlusPlusConfig.h.in  MLCrypto.cpp  MLCrypto.hpp  MarkLogicTypes.cpp  NoCredentialsException.cpp  NoCredentialsException.hpp  Permission.cpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  ResponseCodes.cpp  ResponseCodes.hpp  ResponseWrapper.cpp  ResponseWrapper.h  SearchDescription.cpp  (+18 more)
release/src/ext/: License.txt
release/src/internals/: AsyncWrapper.hpp  AuthenticatingProxy.cpp  AuthenticatingProxy.hpp  AuthorizationBuilder.cpp  AuthorizationBuilder.hpp  Conversions.cpp  Credentials.cpp  Credentials.hpp  FakeConnection.cpp  FakeConnection.hpp  MLCrypto.cpp  MLCrypto.hpp  Types.hpp  memory.hpp
release/src/utilities/: CppRestJsonDocumentContent.cpp  CppRestJsonDocumentContent.hpp  CppRestJsonHelper.cpp  CppRestJsonHelper.hpp  DocumentBatchHelper.cpp  DocumentBatchWriter.cpp  DocumentHelper.cpp  InvalidFormatException.cpp  InvalidFormatException.hpp  PathNavigator.cpp  PugiXmlDocumentContent.cpp  PugiXmlHelper.cpp  PugiXmlHelper.hpp  ResponseHelper.cpp  ResponseHelper.hpp  ResponseUtilities.cpp  ResponseUtilities.hpp  SearchBuilder.cpp  SearchBuilder.hpp  SearchOptionsBuilder.cpp  SearchOptionsBuilder.hpp
release/test/: AuthenticatingProxyTest.cpp  AuthenticatingProxyTest.hpp  AuthorizationBuilderTest.cpp  AuthorizationBuilderTest.hpp  CMakeLists.txt  ConnectionCollectionsTest.cpp  ConnectionCollectionsTest.hpp  ConnectionDocumentCrudTest.cpp  ConnectionDocumentCrudTest.hpp  ConnectionFactory.cpp  ConnectionFactory.hpp  ConnectionRawHttpTest.cpp  ConnectionRawHttpTest.hpp  ConnectionSearchTest.cpp  ConnectionSearchTest.hpp  ConnectionValuesTest.cpp  ConnectionValuesTest.hpp  CredentialsTest.cpp  CredentialsTest.hpp  DocumentBatchWriterTest.cpp  DocumentBatchWriterTest.hpp  DocumentTraversalTest.cpp  DocumentTraversalTest.hpp  MLCryptoTest.cpp  MLCryptoTest.hpp  PathNavigatorTest.cpp  PathNavigatorTest.hpp  ResponseTest.cpp  ResponseTest.hpp  SearchBuilderTest.cpp  SearchBuilderTest.hpp  SearchOptionsBuilderTest.cpp  SearchOptionsBuilderTest.hpp  SearchResultSetTest.cpp  SearchResultSetTest.hpp  ValuesResultSetTest.cpp  ValuesResultSetTest.hpp  bingrequest.cpp  getdoc.cpp  main.cpp
src/: AuthenticatingProxy.cpp  CMakeLists.txt  Doxyfile.in  MLCPlusPlus.h  MLCPlusPlus.hpp  Response.hpp
(+945 files in other folders)
